--- a/client/src/pages/styles/DashboardPage.css
+++ b/client/src/pages/styles/DashboardPage.css
@@ -1,3 +1,74 @@
 .dashboard-body {
-    background-color: #DCDCDC;
+    position: relative;
+    top: 7%;
+    background-color: #D9D9D9;
+    width: 1455px;
+    height: 728px;
+    margin-left: 80px;
+}
+
+.dashboard-body h1 {
+    color: #475C6F;
+    position: absolute;
+    top: 1%;
+    font-weight: bolder;
+}
+
+.dashboard-container {
+    position: absolute;
+    top: 8%;
+    padding: 10px;
+    width: 1455px;
+    height: 610px;
+}
+
+.report-view {
+    display: flex;
+    position: absolute;
+    top: 10%;
+    width: 300px;
+    height: 50px;
+    align-content: center;
+    align-items: center;
+    gap: 10px;
+    color: #475C6F;
+}
+
+.total-active-users {
+    color: #475C6F;
+    gap: 10px;
+    display: flex;
+    position: absolute;
+    top: 60%;
+    left: 1%;
+}
+
+.user-feedback {
+    color: #475C6F;
+    gap: 10px;
+    display: flex;
+    position: absolute;
+    top: 60%;
+    left: 65%;
+}
+
+.nav {
+    position: absolute;
+    height: 30px;
+    z-index: 20;
+}
+
+.graph {
+    width: 1420px;
+    position: absolute;
+    top: 25%;
+    left: 1%;
+    z-index: 10;
+}
+
+.rating {
+    width: 490px;
+    position: absolute;
+    top: 67%;
+    left: 65%;
 }
