--- a/client/src/pages/styles/LostItemPage.css
+++ b/client/src/pages/styles/LostItemPage.css
@@ -24,18 +24,19 @@
 
 .searchBar input {
     position: absolute;
-    width: 900px;
+    width: 700px;
     border-radius: 5px;
-    top: 3%;
-    left: 17%;
+    top: 9%;
+    left: 3%;
     background-color: #D9D9D9;
     color: #475C6F;
+    border: 1px solid #475C6F;
 }
 
 .searchBar svg {
     position: absolute;
-    top: 4%;
-    left: 15%;
+    top: 9.5%;
+    left: 1%;
 }
 
 .searchBar input:focus {
@@ -141,6 +142,32 @@
     background-color: transparent;
     box-shadow: none;
     border: none;
+}
+
+.actions-row {
+    display: flex;
+    flex-direction: row;
+    position: absolute;
+    top: 8%;
+    left: 65%;
+    width: 540px;
+    height: 40px;
+    padding: 5px;
+    justify-items: center;
+    align-content: center;
+    gap: 10px;
+    color: #475C6F;
+}
+
+.actions-row button {
+    color: #475C6F;
+    border-radius: 5px;
+    background-color: transparent;
+    border: 1px solid #475C6F;
+}
+
+.actions-row button:hover {
+    background-color: #c9d4e0;
 }
 
 .lost-item-table th:nth-child(1),
