--- a/client/src/user_pages/styles/HomePage.css
+++ b/client/src/user_pages/styles/HomePage.css
@@ -3,14 +3,14 @@
     top: 7%;
     background-color: #D9D9D9;
     width: 1455px;
-    height: 728px;
+    height: 1400px;
     margin-left: 80px;
 }
 
 .home-body h1 {
     color: #475C6F;
     position: absolute;
-    top: 6%;
+    top: -5%;
     left: 4%;
     font-weight: bolder;
 }
@@ -29,7 +29,7 @@
     width: 1180px;
     height: 100px;
     border-radius: 10px;
-    top: 9%;
+    top: 5%;
     left: 17%;
     box-shadow: 0px 2px 10px rgb(0, 0, 0, 0.5);
 }
@@ -138,5 +138,62 @@
   right: 170px; 
 }
 
+.home-lost-container {
+    position: relative;
+    left: 1%;
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+    width: 100%;
+    height: 400px;
+    top: 20%;
+}
 
+.home-found-container {
+    position: relative;
+    background-color: blueviolet;
+    width: 100%;
+    height: 400px;
+    top: 29%;
+}
+
+.lost-item-card {
+    width: 300px;
+    background-color: #cbcbcb;
+    text-align: center;
+    border-radius: 10px;
+    box-shadow: 0px 2px 5px rgb(0, 0, 0, 0.5);
+}
+
+.lost-item-card h4{
+    font-weight: bold;
+}
+
+.lost-item-card img {
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    width: inherit;
+}
+
+
+.own {
+    display: flex;
+    margin-left: 10px;
+    gap: 10px;
+}
+
+.own strong{
+    font-style: normal;
+}
+
+.own strong:hover {
+    color: black;
+}
+
+
+.own p{
+    text-align: left;
+    color: black;
+    font-style: italic;
+}
 
