--- a/client/src/user_pages/styles/FoundMatchResults.css
+++ b/client/src/user_pages/styles/FoundMatchResults.css
@@ -1,20 +1,73 @@
 .p-6 {
     position: absolute;
-    top: 8%;
-    left: 8%;
+    top: 15%;
+    left: 6%;
     display: flex;
 }
 
 .matching-results {
     font-size: 10px;
-    line-height: 0px;
+    line-height: 5px;
     position: absolute;
-    top: 23%;
-    margin-left: 100px;
+    top: 25%;
+    margin-left: 120px;
 }
 
 .owner-info {
     line-height: 0px;
     margin-top: 10px;
     color: black;
+}
+
+.matching-card{ 
+    margin-left: 10px;
+    background-color: white;
+    height: 550px;
+    width: 330px;
+    border-radius: 10px;
+    padding: 10px;
+    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.5);
+}
+
+.progress-bar-full {
+    position: relative;
+    background-color: transparent;
+    border: 1px solid black;
+    width: 190px;
+    height: 10px;
+    border-radius: 5px;
+    margin-top: -10px;
+}
+
+.progress-bar-percentage {
+    position: relative;
+    background-color: green;
+    height: 10px;
+    border-radius: 5px;
+}
+
+.results-more {
+    position: absolute;
+    top: 50%;
+}
+
+.matching-card-actions {
+    position: absolute;
+    display: flex;
+    gap: 5px;
+    top: 90%;
+}
+
+.matching-card-actions button {
+    border-radius: 20px;
+    background-color: transparent;
+    border: 2px solid #475C6F;
+    color: black;
+    height: 40px;
+    width: 300px;
+}
+
+.matching-card-actions button:hover {
+    background-color: #475C6F;
+    color: white;
 }
