--- a/client/src/user_components/styles/UserFoundHeader.css
+++ b/client/src/user_components/styles/UserFoundHeader.css
@@ -49,7 +49,7 @@
     z-index: 400;
 }
 
-.header-right-lost p {
+.header-right-found p {
     margin-top: 10px;
     font-weight: bold;
     cursor: pointer;
