--- a/client/src/user_pages/styles/UserFoundItemPage.css
+++ b/client/src/user_pages/styles/UserFoundItemPage.css
@@ -1,4 +1,4 @@
-.lost-item-body {
+.found-item-body {
     position: relative;
     top: 7%;
     background-color: #D9D9D9;
@@ -7,7 +7,7 @@
     margin-left: 80px;
 }
 
-.lost-item-body h1 {
+.found-item-body h1 {
     color: #475C6F;
     position: absolute;
     top: 1%;
