--- a/client/src/user_pages/styles/LostMatchResults.css
+++ b/client/src/user_pages/styles/LostMatchResults.css
@@ -5,6 +5,15 @@
     display: flex;
 }
 
+.background {
+    position: absolute;
+    top: 10%;
+    left: 0;
+    width: 100%;
+    height: 668px;
+    background-color: #D9D9D9;
+}
+
 .matching-results {
     font-size: 10px;
     line-height: 5px;
@@ -74,7 +83,7 @@
 
 .more-match {
     position: absolute;
-    top: -8%;
+    top: 8%;
     left: 85%;
     background-color: #475C6F;
     color: white;
