--- a/client/src/components/styles/ClaimedLostFound.css
+++ b/client/src/components/styles/ClaimedLostFound.css
@@ -1,8 +1,10 @@
 .body {
     background-color: #cdcbcb;
-    position: relative;
-    top: 20%;
+    height: 300px;
     width: 100%;
+    min-width: 100%;
+    margin-top: 200px;
     border-radius: 10px;
     box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.5);
 }
+
