--- a/client/src/components/styles/DashboardHeader.css
+++ b/client/src/components/styles/DashboardHeader.css
@@ -2,7 +2,7 @@
     position: relative;
     display: flex;
     background-color: #475C6F;
-    width: 1455px;
+    min-width: 105%;
     height: 50px;
     align-items: center;
 }
@@ -34,7 +34,8 @@
 .header-right {
     gap: 10px;
     display: flex;
-    margin-left: 750px;
+    margin-left: auto;
+    margin-right: 100px;
     justify-content: center;
     align-items: center;
     text-align: center;
@@ -66,9 +67,7 @@
 
 
 .account-dropdown.dropDown{
-    position: absolute;
-    top: 6%;
-    left: 89%;
+    margin-left: -100px;
     opacity: 1;
 }
 
