--- a/client/src/components/styles/FeedbackChart.css
+++ b/client/src/components/styles/FeedbackChart.css
@@ -2,10 +2,10 @@
     background-color: #cdcbcb;
     position: relative;
     top: 20%;
-    width: 100%;
+    min-width: 15%;
     border-radius: 10px;
     box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.5);
-    height: 215px;
+    height: 300px;
     padding: 20px;
 }
 
@@ -17,9 +17,10 @@
     margin-top: 2px;
     display: flex;
     flex-direction: row;
-    width: 100%;
+    min-width: 20%;
     gap: 20px;
     transition: all ease-in-out 0.5s;
+    height: 50px;
 }
 
 .feedback-rows:hover {
