--- a/client/src/components/styles/TablesHeader.css
+++ b/client/src/components/styles/TablesHeader.css
@@ -2,7 +2,7 @@
     position: relative;
     display: flex;
     background-color: #475C6F;
-    width: 1455px;
+    max-width: 105%;
     height: 50px;
     align-items: center;
 }
@@ -32,9 +32,10 @@
 }
 
 .header-right-table {
+    position: fixed;
     gap: 10px;
     display: flex;
-    margin-left: 780px;
+    margin-left: 82%;
     justify-content: center;
     align-items: center;
     text-align: center;
@@ -56,7 +57,7 @@
     z-index: 400;
 }
 
-.header-right svg {
+.header-right-table svg {
     cursor: pointer;
 }
 .account-dropdown {
