--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,6 +1,7 @@
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  width: 1540px;
+  width: 100%; /* or remove width entirely */
+  min-height: 120vh; /* make it fill screen height */
   font-weight: 400;
   overflow-x: hidden;
   color-scheme: light dark;
@@ -15,4 +16,5 @@
 
 body {
   margin: 0;
+  min-height: 120vh; /* ensures body always fits screen height */
 }
