--- a/client/src/pages/styles/DashboardPage.css
+++ b/client/src/pages/styles/DashboardPage.css
@@ -1,9 +1,9 @@
 .dashboard-body {
     position: relative;
     top: 7%;
-    background-color: #D9D9D9;
-    width: 1455px;
-    height: 728px;
+    width: 93%;
+    min-width: 97%;
+    min-height: 100%;
     margin-left: 80px;
 }
 
@@ -14,47 +14,51 @@
     font-weight: bolder;
 }
 
-.dashboard-container {
-    position: absolute;
-    top: 8%;
-    padding: 10px;
-    width: 1455px;
-    height: 610px;
+.dashboard-body h4 {
+    margin-top: 80px;
 }
 
-.banner {
+.dashboard-container {
+    position: absolute;
+    top: 20%;
+    padding: 10px;
+    width: 90%;
+}
+
+
+.banner1 {
     position: absolute;
     background-color: black;
-    width: 1180px;
-    height: 100px;
+    min-width: 80%;
+    margin-top: 60px;
+    margin-left: 250px;
+    height: 120px;
     border-radius: 10px;
-    top: 9%;
-    left: 17%;
     box-shadow: 0px 2px 10px rgb(0, 0, 0, 0.5);
 }
 
-.banner img {
+.banner1 img {
     opacity: .7;
     object-fit: cover;
-    width: 1180px;
-    height: 100px;
+    min-width: 100%;
+    height: 100%;
     border-radius: 10px;
 }
 
-.banner strong {
+.banner1 strong {
     top: 10%;
     left: 90%;
     color: white;
     position: absolute;
 }
 
-.banner h1 {
+.banner1 h1 {
     position: absolute;
     left: 2%;
     color: #BDDDFC;
 }
 
-.banner h5 {
+.banner1 h5 {
     font-weight: 100;
     position: absolute;
     top: 50%;
@@ -81,38 +85,43 @@
     gap: 10px;
     display: flex;
     position: absolute;
-    top: 60%;
+    margin-top: 130px;
     left: 1%;
 }
+
 
 .user-feedback {
     color: #475C6F;
     gap: 10px;
     display: flex;
     position: absolute;
-    top: 60%;
+    margin-top: 130px;
+    top: 90%;
     left: 65%;
 }
 
 .nav {
     position: absolute;
     height: 30px;
+    width: 100%;
     z-index: 20;
 }
 
-.graph {
-    width: 1420px;
-    position: absolute;
-    top: 25%;
+.graph1 {
+    display: flex;
+    width: 95%;
+    position: relative;
+    top: 30%;
     left: 1%;
     z-index: 10;
 }
 
 .rating {
-    width: 490px;
+    min-width: 30%;
     position: absolute;
+    margin-top: 220px;
     top: 67%;
-    left: 65%;
+    left: 64%;
 }
 
 .add-info {
