--- a/client/src/pages/styles/FoundItemPage.css
+++ b/client/src/pages/styles/FoundItemPage.css
@@ -2,8 +2,8 @@
     position: relative;
     top: 7%;
     background-color: #D9D9D9;
-    width: 1455px;
-    height: 728px;
+    min-width: 100%;
+    height: 120vh;
     margin-left: 80px;
 }
 
@@ -18,7 +18,7 @@
     position: absolute;
     top: 8%;
     padding: 10px;
-    width: 1455px;
+    width: 100%;
     height: 610px;
 }
 
@@ -55,7 +55,7 @@
     position: absolute;
     top: 15%;
     background-color: #cccaca;
-    width: 1400px;
+    min-width: 93%;
     height: 570px;
     border-radius: 10px;
     
@@ -151,10 +151,11 @@
     flex-direction: row;
     position: absolute;
     top: 8%;
-    left: 65%;
+    left: 62%;
     width: 500px;
     height: 40px;
     padding: 5px;
+    margin-left: -20px;
     justify-items: center;
     align-content: center;
     gap: 10px;
