--- a/client/src/pages/styles/LostItemPage.css
+++ b/client/src/pages/styles/LostItemPage.css
@@ -2,8 +2,8 @@
     position: relative;
     top: 7%;
     background-color: #D9D9D9;
-    width: 1455px;
-    height: 728px;
+    min-width: 100%;
+    min-height: 120vh;
     margin-left: 80px;
 }
 
@@ -18,16 +18,18 @@
     position: absolute;
     top: 8%;
     padding: 10px;
-    width: 1455px;
+    min-width: 98%;
     height: 610px;
 }
 
 .searchBar input {
     position: absolute;
-    width: 700px;
+    min-width: 1000px;
+    margin-left: 250px;
+    margin-top: -40px;
     border-radius: 5px;
     top: 9%;
-    left: 3%;
+    left: 10%;
     background-color: #D9D9D9;
     color: #475C6F;
     border: 1px solid #475C6F;
@@ -35,6 +37,8 @@
 
 .searchBar svg {
     position: absolute;
+    margin-left: 240px;
+    margin-top: -40px;
     top: 9.5%;
     left: 1%;
 }
@@ -55,7 +59,7 @@
     position: absolute;
     top: 15%;
     background-color: #cccaca;
-    width: 1400px;
+    min-width: 95%;
     height: 570px;
     border-radius: 10px;
     
@@ -67,7 +71,8 @@
   text-align: center;         
   font-weight: bold;       
   font-size: 12px;
-  height: 10px;       
+  height: 10px; 
+  min-width: 100%;      
 }
 
 .lost-item-table thead {
@@ -91,7 +96,8 @@
   font-size: 12px;
   justify-items: center;
   justify-content: center;
-  text-align: center; 
+  text-align: center;
+  min-width: 100%; 
 }
 
 
@@ -153,6 +159,7 @@
     position: absolute;
     top: 8%;
     left: 65%;
+    margin-left: auto;
     width: 500px;
     height: 40px;
     padding: 5px;
