--- a/client/src/pages/styles/ProfilePage.css
+++ b/client/src/pages/styles/ProfilePage.css
@@ -2,8 +2,8 @@
     position: relative;
     top: 7%;
     background-color: #D9D9D9;
-    width: 1455px;
-    height: 728px;
+    min-width: 100%;
+    min-height: 120vh;
     margin-left: 80px;
 }
 
@@ -13,14 +13,14 @@
     top: 10%;
     left: 1%;
     background-color: #cdcbcb;
-    width: 1400px;
+    min-width: 92%;
     height: 220px;
     border-radius: 10px;
 }
 
 .profile-container img{
     border-radius: 10px;
-    width: 100%;
+    min-width: 100%;
     height: 100%;
     object-fit: cover;
     border: 1px solid #475C6F;
