--- a/client/src/user_components/styles/HomeHeader.css
+++ b/client/src/user_components/styles/HomeHeader.css
@@ -1,13 +1,13 @@
-.header-body {
+.home-header-body {
     position: relative;
     display: flex;
     background-color: #475C6F;
-    width: 1455px;
+    min-width: 105%;
     height: 50px;
     align-items: center;
 }
 
-.header-body button {
+.home-header-body button {
     padding: 5px;
     display: flex;
     margin-left: 20px;
@@ -22,19 +22,19 @@
     height: 30px;
 }
 
-.header-body button:hover {
+.home-header-body button:hover {
     border-color: #CFE5F9;
     color: #CFE5F9;
 }
 
-.header-body button:hover {
+.home-header-body button:hover {
     background-color: #7c8a97;
 }
 
 .home-header-right {
     gap: 10px;
     display: flex;
-    margin-left: 1022px;
+    margin-left: 65%;
     justify-content: center;
     align-items: center;
     text-align: center;
@@ -65,12 +65,7 @@
 }
 
 
-.account-dropdown.dropDown{
-    position: absolute;
-    top: 6%;
-    left: 89%;
-    opacity: 1;
-}
+
 
 .notify-panel {
     opacity: 0;
