--- a/client/src/user_pages/styles/HomePage.css
+++ b/client/src/user_pages/styles/HomePage.css
@@ -2,7 +2,7 @@
     position: relative;
     top: 7%;
     background-color: #D9D9D9;
-    width: 1455px;
+    width: 100%;
     height: 1200px;
     margin-left: 80px;
 }
@@ -23,10 +23,10 @@
     height: 610px;
 }
 
-.banner {
+.banner2 {
     position: absolute;
     background-color: black;
-    width: 1180px;
+    width: 75%;
     height: 100px;
     border-radius: 10px;
     top: 5%;
@@ -34,28 +34,28 @@
     box-shadow: 0px 2px 10px rgb(0, 0, 0, 0.5);
 }
 
-.banner img {
+.banner2 img {
     opacity: .7;
     object-fit: cover;
-    width: 1180px;
+    width: 100%;
     height: 100px;
     border-radius: 10px;
 }
 
-.banner strong {
+.banner2 strong {
     top: 10%;
     left: 90%;
     color: white;
     position: absolute;
 }
 
-.banner h1 {
+.banner2 h1 {
     position: absolute;
     left: 2%;
     color: #BDDDFC;
 }
 
-.banner h5 {
+.banner2 h5 {
     font-weight: 100;
     position: absolute;
     top: 50%;
@@ -109,12 +109,7 @@
     z-index: 10;
 }
 
-.rating {
-    width: 490px;
-    position: absolute;
-    top: 67%;
-    left: 65%;
-}
+
 
 .add-info {
     transition: all 1s ease;
