--- a/client/src/user_pages/styles/UserFoundItemPage.css
+++ b/client/src/user_pages/styles/UserFoundItemPage.css
@@ -2,8 +2,8 @@
     position: relative;
     top: 7%;
     background-color: #D9D9D9;
-    width: 1455px;
-    height: 728px;
+    width: 100%;
+    min-height: 120vh;
     margin-left: 80px;
 }
 
@@ -19,7 +19,7 @@
     top: 8%;
     padding: 10px;
     width: 1455px;
-    height: 610px;
+    height: 120vh;
 }
 
 .searchBar input {
