--- a/client/src/user_pages/styles/UserLostItemPage.css
+++ b/client/src/user_pages/styles/UserLostItemPage.css
@@ -2,8 +2,8 @@
     position: absolute;
     top: 7%;
     background-color: #D9D9D9;
-    width: 1455px;
-    height: 728px;
+    width: 100%;
+    height: 120vh;
     margin-left: 80px;
 }
 
@@ -20,7 +20,7 @@
     top: 8%;
     padding: 10px;
     width: 1455px;
-    height: 610px;
+    height: 120vh;
 }
 
 .page-lost-container {
@@ -30,8 +30,8 @@
     grid-template-columns: repeat(4, 1fr);
     padding: 15px;
     gap: 20px;
-    width: 1400px;
-    height: 630px;
+    width: 100%;
+    height: 100vh;
     top: 15%;
     overflow-x: hidden;
     overflow-y: scroll;
@@ -202,6 +202,62 @@
 
 .actions-row button:hover {
     background-color: #c9d4e0;
+}
+
+.user-lost-searchBar {
+    position: absolute;
+    top: 10%;
+    left: 9%;
+    width: 700px;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.user-lost-searchBar input {
+    position: absolute;
+    width: 700px;
+    border-radius: 5px;
+    top: 10%;
+    left: 15%;
+    background-color: #D9D9D9;
+    color: #475C6F;
+    border: 1px solid #475C6F;
+}
+
+.user-lost-searchBar svg {
+    position: absolute;
+    top: 11%;
+    left: 10%;
+}
+
+
+.right-upper-panel {
+    position: absolute;
+    top: 10%;
+    left: 90%;
+    width: 50px;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.right-upper-panel svg {
+    cursor: pointer;
+} 
+.user-lost-searchBar input:focus {
+    border-color: #475C6F;
+}
+
+.user-lost-searchBar input::placeholder{
+    font-style: italic;
+    padding: 2px;
+}
+
+.category::placeholder {
+    opacity: 0.5;
 }
 
 .lost-item-table th:nth-child(1),
