--- a/client/src/user_components/styles/UserLostHeader.css
+++ b/client/src/user_components/styles/UserLostHeader.css
@@ -28,7 +28,7 @@
     gap: 10px;
     display: flex;
     margin-left: auto;
-    margin-right: 200px;
+    margin-right: 100px;
     justify-content: center;
     align-items: center;
     text-align: center;
@@ -105,3 +105,22 @@
     padding: 3px;
     border-radius: 5px;
 }
+
+
+@media (min-width: 1701px) {
+    .account-dropdown.dropDown {
+        position: absolute;
+        top: 0%;
+        left: 93%; /* moved further right */
+        opacity: 1;
+    }
+
+    .notify-panels.notifyPanel {
+        position: absolute;
+        top: 4%;
+        left: 76%; /* adjust this to fit your layout */
+        opacity: 1;
+        z-index: 100;
+    }
+}
+
