--- a/client/src/user_pages/styles/ItemManagementPage.css
+++ b/client/src/user_pages/styles/ItemManagementPage.css
@@ -2,8 +2,8 @@
     position: relative;
     top: 7%;
     background-color: #D9D9D9;
-    width: 1455px;
-    height: 728px;
+    width: 100%;
+    height: 120vh;
     margin-left: 80px;
 }
 
@@ -18,7 +18,7 @@
     position: absolute;
     top: 8%;
     padding: 10px;
-    width: 1455px;
+    width: 100%;
     height: 610px;
 }
 
@@ -54,7 +54,7 @@
     position: absolute;
     top: 15%;
     background-color: #cccaca;
-    width: 1400px;
+    width: 92%;
     height: 570px;
     border-radius: 10px;
     
