--- a/client/src/user_pages/styles/UserLostProcedurePage.css
+++ b/client/src/user_pages/styles/UserLostProcedurePage.css
@@ -11,9 +11,7 @@
     box-shadow: 0px 2px 5px rgb(0, 0, 0, 0.7);
 }
 
-.body {
-    position: relative;
-}
+
 
 .user-lost-procedure-body h1 {
     font-weight: bold;
@@ -59,4 +57,26 @@
         height: 728px;
         margin-left: 80px;
     }
+}
+
+@media (min-width: 1701px) {
+    .user-lost-procedure-body {
+        width: 90%;
+        height: 100%;
+        margin-left: 0;
+        padding: 20px;
+    }
+    .user-lost-procedure-body h1 {
+        font-size: 24px;
+    }
+    .user-lost-procedure-body p {
+        font-size: 24px;
+        top: 30%;
+    }
+    .user-lost-procedure-body button {
+        width: 250px;
+        height: 50px;
+        font-size: 18px;
+    }
+    
 }
