--- a/client/src/pages/styles/TransactionPage.css
+++ b/client/src/pages/styles/TransactionPage.css
@@ -1,6 +1,8 @@
 .transaction-body {
+    position: relative;
+    top: 7%;
     background-color: #D9D9D9;
-    width: 1455px;
-    height: 728px;
+    min-width: 100%;
+    height: 120vh;
     margin-left: 80px;
 }
