--- a/client/src/pages/styles/LostItemPage.css
+++ b/client/src/pages/styles/LostItemPage.css
@@ -59,7 +59,7 @@
     flex-direction: column;
     position: absolute;
     top: 15%;
-    background-color: #cccaca;
+    background-color: white;
     min-width: 95%;
     height: 570px;
     border-radius: 10px;
