--- a/client/src/pages/styles/TransactionPage.css
+++ b/client/src/pages/styles/TransactionPage.css
@@ -7,6 +7,45 @@
     margin-left: 80px;
 }
 
+.transaction-content {
+    position: relative;
+    display: flex;
+    align-content: center;
+    justify-content: center;
+    top: -25%;
+    left: 20px;
+    width: 90%;
+    height: 70%;
+    background-color: #D9D9D9;
+    border-radius: 10px;
+    padding: 20px;
+}
+
+.transactionScores {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 500px;
+}
+
+.transactionScores .scoreResult {
+    display: flex;
+    gap: 20px;
+}
+
+.itemLostTransaction, 
+.itemFoundTransaction {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    max-width: 500px;
+    min-width: 500px;
+    padding: 20px;
+    background-color: white;
+    border-radius: 20px;
+}
+
 .transaction-content p{
     color: black;
 }
