--- a/client/src/user_pages/styles/UserLostItemPage.css
+++ b/client/src/user_pages/styles/UserLostItemPage.css
@@ -78,7 +78,7 @@
     flex-direction: column;
     position: absolute;
     top: 15%;
-    background-color: #cccaca;
+    background-color: white;
     width: 1400px;
     height: 570px;
     border-radius: 10px;
