--- a/client/src/pages/styles/TransactionPage.css
+++ b/client/src/pages/styles/TransactionPage.css
@@ -1,6 +1,6 @@
 .transaction-body {
-    position: relative;
-    top: 7%;
+    position: absolute;
+    top: 0%;
     background-color: #D9D9D9;
     min-width: 100%;
     height: 120vh;
@@ -12,7 +12,7 @@
     display: flex;
     align-content: center;
     justify-content: center;
-    top: -25%;
+    top: -35%;
     left: 20px;
     width: 90%;
     height: 70%;
@@ -41,6 +41,7 @@
     align-items: center;
     max-width: 500px;
     min-width: 500px;
+    min-height: 600px;
     padding: 20px;
     background-color: white;
     border-radius: 20px;
@@ -48,4 +49,15 @@
 
 .transaction-content p{
     color: black;
+}
+
+.item-transaction-details {
+    display: flex;
+    min-width: 100%;
+    min-height: 20%;
+    margin-top: 10px;
+}
+
+.item-transaction-details div{
+    width: 50%;
 }
