--- a/client/src/pages/styles/NotificationPage.css
+++ b/client/src/pages/styles/NotificationPage.css
@@ -1,6 +1,13 @@
 .notification-body {
+    position: relative;
+    top: 7%;
     background-color: #D9D9D9;
-    width: 1455px;
-    height: 728px;
+    width: 100%;
+    height: 1200px;
     margin-left: 80px;
+}
+
+.notification-container h2, .notification-container p {
+    color: #475C6F;
+
 }
