--- a/client/src/user_pages/styles/UserNotificationPage.css
+++ b/client/src/user_pages/styles/UserNotificationPage.css
@@ -1,6 +1,41 @@
 .notification-body {
+    position: relative;
+    top: 7%;
     background-color: #D9D9D9;
-    width: 1455px;
-    height: 728px;
+    width: 100%;
+    height: 1200px;
     margin-left: 80px;
+}
+
+.notification-container {
+    position: absolute;
+    top: 5%;
+    padding: 10px;
+    width: 1455px;
+    height: 120vh;
+}
+
+.notification-card {
+    background-color: white;
+    border-radius: 8px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    padding: 15px;
+    margin-bottom: 15px;
+    width: 95%;
+
+}
+
+.delete-btn {
+ position: absolute;
+  background: transparent;
+  border: none;
+  cursor: pointer;
+  margin-left: 1150px;
+  color: #dc3545;
+  transition: 0.2s ease-in-out;
+}
+
+.delete-btn:hover {
+  color: #a71d2a;
+  transform: scale(1.1);
 }
