--- a/client/src/pages/styles/LogInPage.css
+++ b/client/src/pages/styles/LogInPage.css
@@ -1,6 +1,6 @@
 .login-body {
     width: 100%;
-    background-image: url('/auth-background.jpg');
+    background-image: url('/landing-page-img.png');
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
