--- a/client/src/user_pages/styles/UserNotificationPage.css
+++ b/client/src/user_pages/styles/UserNotificationPage.css
@@ -25,6 +25,10 @@
 
 }
 
+.notification-card:hover {
+    background-color: #ebebeb;
+}
+
 .delete-btn {
  position: absolute;
   background: transparent;
