--- a/client/src/pages/styles/UserProfilesPage.css
+++ b/client/src/pages/styles/UserProfilesPage.css
@@ -54,7 +54,7 @@
     flex-direction: column;
     position: absolute;
     top: 15%;
-    background-color: #cccaca;
+    background-color: white;
     width: 1400px;
     height: 570px;
     border-radius: 10px;
@@ -172,7 +172,7 @@
 
 .user-profiles-table th:nth-child(1),
 .user-profiles-table td:nth-child(1) {
-    width: 12%;
+    width: 15%;
 }
 
 .user-profiles-table th:nth-child(2),
@@ -182,7 +182,7 @@
 
 .user-profiles-table th:nth-child(3),
 .user-profiles-table td:nth-child(3) {
-    width: 14%;
+    width: 20%;
 }
 
 
@@ -193,12 +193,12 @@
 
 .user-profiles-table th:nth-child(5),
 .user-profiles-table td:nth-child(5) {
-    width: 17%;
+    width: 15%;
 }
 
 .user-profiles-table th:nth-child(6),
 .user-profiles-table td:nth-child(6) {
-    width: 20%;
+    width: 10%;
 }
 
 .user-profiles-table th:nth-child(7) {
@@ -206,5 +206,10 @@
 }
 .user-profiles-table td:nth-child(7) {
     width: 3.8%;
+}
+
+/* Hide default caret from dropdown toggle */
+.custom-dropdown-toggle::after {
+  display: none !important;
 }
 
