--- a/client/src/user_pages/styles/ItemManagementPage.css
+++ b/client/src/user_pages/styles/ItemManagementPage.css
@@ -53,7 +53,7 @@
     display: block;
     position: absolute;
     top: 15%;
-    background-color: #cccaca;
+    background-color: white;
     width: 92%;
     height: 570px;
     border-radius: 10px;
@@ -75,12 +75,14 @@
   border-top-right-radius: 10px;
   height: 50px;
   width: 100%;
+  border-radius: 10px;
 }
 
 .manage-item-table tbody {
   background-color: transparent;
   height: 50px;
   width: 100%;
+  border-radius: 10px;
 }
 
 .manage-item-table td {
@@ -269,5 +271,44 @@
     white-space: nowrap;
 }
 
+
+.item-image-match img{
+    position: relative;
+    border-radius: 20px;
+    background-color: aliceblue;
+    width: 250px;
+    height: 150px;
+    object-fit: cover;
+}
+
+.selected-row {
+  background-color: #e0f3ff !important; 
+}
+
+.searchBar2 input {
+    position: absolute;
+    width: 700px;
+    border-radius: 5px;
+    top: 9%;
+    left: 3%;
+    background-color: #D9D9D9;
+    color: #475C6F;
+    border: 1px solid #475C6F;
+}
+
+.searchBar2 svg {
+    position: absolute;
+    top: 9.5%;
+    left: 1%;
+}
+
+.searchBar2 input:focus {
+    border-color: #475C6F;
+}
+
+.searchBar2 input::placeholder{
+    font-style: italic;
+    padding: 2px;
+}
 
 
