--- a/client/src/user_pages/styles/LostMatchResults.css
+++ b/client/src/user_pages/styles/LostMatchResults.css
@@ -1,18 +1,15 @@
-.p-7 {
+.p-8 {
     position: absolute;
-    top: 15%;
-    left: 6%;
     display: flex;
+    width: 100%;
+    height: 120vh;
+     background-image: url("/landing-page-img.png"); 
+    background-size: cover;   
+    background-position: center;
+    background-repeat: no-repeat;
 }
 
-.background {
-    position: absolute;
-    top: 10%;
-    left: 0;
-    width: 100%;
-    height: 668px;
-    background-color: #D9D9D9;
-}
+
 
 .matching-results {
     font-size: 10px;
@@ -28,8 +25,9 @@
     color: black;
 }
 
-.matching-card{ 
-    margin-right: 30px;
+.matching-card{
+    margin-top: 40px; 
+    margin-left: 40px;
     background-color: white;
     height: 550px;
     width: 330px;
@@ -111,6 +109,63 @@
     background-color: #BDDDFC;
     color: black;
 }
+
+.floating-panel {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0,0,0,0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+.floating-panel-content {
+  background: white;
+  padding: 20px;
+  border-radius: 10px;
+  max-width: 600px;
+  width: 90%;
+  max-height: 80%;
+  overflow-y: auto;
+  position: relative;
+}
+
+.close-btn {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  border: none;
+  background-color: transparent;
+  color: #475C6F;
+  padding: 5px 10px;
+  cursor: pointer;
+  border-radius: 5px;
+}
+
+.floating-panel-content p {
+    color: black;
+}
+
+.background {
+    margin-top: -80px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  max-height: 100%;
+  text-align: center;
+  background: #000000;
+  background-image: url("/landing-page-img.png"); /* adjust path */
+  background-size: cover;    /* makes image cover entire area */
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+
 
 @media (min-width: 1701px) {
     .matching-card {
