--- a/client/src/user_pages/styles/UserLostItemPage.css
+++ b/client/src/user_pages/styles/UserLostItemPage.css
@@ -303,6 +303,12 @@
 }
 
 
+.saved-items-container:hover {
+    background-color: #D9D9D9;
+    cursor: pointer;
+    scale: 1.05;
+}
+
 @media (min-width: 1701px) {
     .page-lost-container {
         width: 100%;
