--- a/client/src/user_pages/styles/UserNotificationPage.css
+++ b/client/src/user_pages/styles/UserNotificationPage.css
@@ -3,15 +3,16 @@
     top: 7%;
     background-color: #D9D9D9;
     width: 100%;
-    height: 1200px;
+    height: 100%;
     margin-left: 80px;
 }
 
 .notification-container {
     position: absolute;
-    top: 5%;
+    background-color: #D9D9D9;
+    top: 100%;
     padding: 10px;
-    width: 1455px;
+    width: 100%;
     height: 120vh;
 }
 
@@ -34,7 +35,7 @@
   background: transparent;
   border: none;
   cursor: pointer;
-  margin-left: 1150px;
+  margin-left: auto;
   color: #dc3545;
   transition: 0.2s ease-in-out;
 }
