--- a/client/src/user_pages/styles/UserSettingsPage.css
+++ b/client/src/user_pages/styles/UserSettingsPage.css
@@ -14,9 +14,9 @@
 
 .settings-container {
     position: relative;
-    top: 7%;
+    top: 5%;
     background-color: #D9D9D9;
     width: 1455px;
-    height: 728px;
+    min-height: 80%;
     margin-left: 80px;
 }
