--- a/client/src/user_components/styles/HomeHeader.css
+++ b/client/src/user_components/styles/HomeHeader.css
@@ -156,6 +156,7 @@
         margin-top: -50px;
     }
     
+    
 }
 
 @media (max-width: 992px) {
@@ -185,7 +186,7 @@
      .dropdown-containers {
         position: absolute;
         top: 50px;
-        left:45%;
+        left: 45%;
     }
     
 }
@@ -193,7 +194,13 @@
 @media (max-width: 576px) {
     .home-header-body {
         min-width: 38%;
+        font-size: small;
     }
+
+    .home-header-body input {
+        width: 80%;
+    }
+
     .home-header-right {
         margin-left: auto;
         margin-right: 100px;
