--- a/client/src/user_pages/styles/FoundMatchResults.css
+++ b/client/src/user_pages/styles/FoundMatchResults.css
@@ -130,7 +130,7 @@
     top: 7%;
     left: 6%;
     width: 100%;
-    background-color: #D9D9D9;
+    background-color: white;
     background-size: cover;   
     background-position: center;
     background-repeat: no-repeat;
