--- a/client/src/user_pages/styles/UserSettingsPage.css
+++ b/client/src/user_pages/styles/UserSettingsPage.css
@@ -17,6 +17,6 @@
     top: 5%;
     background-color: #D9D9D9;
     width: 1455px;
-    min-height: 80%;
+    height: 100%;
     margin-left: 80px;
 }
