--- a/client/src/user_components/styles/HeaderNotifyDropdown.css
+++ b/client/src/user_components/styles/HeaderNotifyDropdown.css
@@ -1,6 +1,6 @@
 .notify-body {
   position: absolute;
-  width: 300px;
+  width: 100%;
   max-height: 170px;
   overflow-y: auto;
   background: white;
