--- a/client/src/user_components/styles/HomeHeader.css
+++ b/client/src/user_components/styles/HomeHeader.css
@@ -2,7 +2,7 @@
     position: relative;
     display: flex;
     background-color: #475C6F;
-    min-width: 105%;
+    width: 100%;
     height: 50px;
     align-items: center;
 }
@@ -34,7 +34,8 @@
 .home-header-right {
     gap: 10px;
     display: flex;
-    margin-left: 65%;
+    margin-left: auto;
+    margin-right: 10%;
     justify-content: center;
     align-items: center;
     text-align: center;
@@ -65,6 +66,7 @@
 }
 
 .account-dropdown.dropDown{
+    position: fixed;
     top: 100%;
     left: 72%;
     opacity: 1;
@@ -135,127 +137,9 @@
 
 
 
-@media (max-width: 1920px) {
-    .home-header-body {
-        min-width: 100%;
-    }
-    .home-header-right {
-        margin-left: auto;
-        margin-right: 90px;
-    }
 
-    .dropdown-containers {
-        position: absolute;
-        top: 50px;
-        left: 78%;
-    }
-    .account-dropdown.dropDown
-    {
-        margin-top: -50px;
-        margin-left: -90px;
-    }    
-}
 
-@media (max-width: 1540px) {
-    .home-header-body {
-        min-width: 100%;
-    }
-    .home-header-right {
-        margin-left: auto;
-        margin-right: 100px;
-    }
-
-    .dropdown-containers {
-        position: absolute;
-        top: 50px;
-        left: 72%;
-    }
-    .account-dropdown.dropDown
-    {
-        margin-top: -50px;
-        margin-left: -90px;
-    }    
-}
-
-@media (max-width: 1200px) {
-    .home-header-body {
-        min-width: 100%;
-    }
-    .home-header-right {
-        margin-left: auto;
-        margin-right: 100px;
-    }
-    .dropdown-containers {
-        position: absolute;
-        top: 50px;
-        left: 65%;
-    }
-
-    .account-dropdown.dropDown
-    {
-        margin-top: -50px;
-    }
-    
-    
-}
-
-@media (max-width: 992px) {
-    .home-header-body {
-        min-width: 100%;
-    }
-    .home-header-right {
-        margin-left: auto;
-        margin-right: 100px;
-    }
-     .dropdown-containers {
-        position: absolute;
-        top: 50px;
-        left: 60%;
-    }
-    
-}
-
-@media (max-width: 768px) {
-    .home-header-body {
-        min-width: 100%;
-    }
-    .home-header-right {
-        margin-left: auto;
-        margin-right: 100px;
-    }
-     .dropdown-containers {
-        position: absolute;
-        top: 50px;
-        left: 45%;
-    }
-    
-}
-
-@media (max-width: 576px) {
-    .home-header-body {
-        min-width: 38%;
-        font-size: small;
-    }
-
-    .home-header-body input {
-        width: 80%;
-    }
-
-    .home-header-right {
-        margin-left: auto;
-        margin-right: 100px;
-    }
-    .account-dropdown.dropDown
-    {
-        margin-top: -50px;
-        margin-left: -100px;
-    }
     
    
-     .dropdown-containers {
-        position: absolute;
-        top: 60px;
-        left: 150px;
-    }
+
     
-}
