--- a/client/src/user_pages/styles/UserFoundProcedurePage.css
+++ b/client/src/user_pages/styles/UserFoundProcedurePage.css
@@ -3,8 +3,9 @@
     top: 9%;
     left: 6%;
     background-color: white;
-    width: 1420px;
-    height: 650px;
+    width: 80%;
+    height: 700px;
+    max-height: 800px;
     z-index: 10;
     border-radius: 20px;
     padding: 10px;
@@ -33,17 +34,15 @@
 
 .user-found-procedure-body p {
     position: absolute;
-    width: 1200px;
-    font-size: 20px;
+    width: 90%;
+    font-size: 1rem;
     top: 25%;
     left: 5%;
     color: black;
 }
 
 .user-found-procedure-body button{
-    position: absolute;
-    top: 85%;
-    left: 40%;
+    
     background-color: #475C6F;
     border-radius: 20px;
     width: 200px;
@@ -55,96 +54,32 @@
     color: black;
 }
 
-@media (max-width: 1200px) {
-   .user-found-procedure-body {
-        width: 1100px;
-   }
-
-    .user-found-procedure-body p {
-        font-size: 16px;
-        width: 90%;
-        top: 22%;
-        left: 5%;
+@media (max-width: 920px) 
+{ 
+    .user-found-procedure-body p 
+    {
+        font-size: 0.8rem;
+        margin-left: 10px;
     }
-
-    .lost-reminders p {
-        width: 80%;
-    }
-
-    .user-found-procedure-body button {
-        top: 80%;
-        left: 30%;
-        width: 150px;
-        height: 35px;
-    }
+     
 }
 
-@media (max-width: 992px) {
-   .user-found-procedure-body {
-        width: 900px;
-   }
-
-    .user-found-procedure-body p {
-        font-size: 13px;
-        top: 25%;
-        left: 5%;
+@media (max-width: 750px) 
+{ 
+    .user-found-procedure-body p 
+    {
+        font-size: 0.7rem;
+        margin-left: 30px;
     }
-
-    .lost-reminders p {
-        width: 60%;
-    }
-
-    .user-found-procedure-body button {
-        top: 80%;
-        left: 30%;
-        width: 150px;
-        height: 35px;
-    }
+     
 }
 
-@media (max-width: 768px) {
-   .user-found-procedure-body {
-        width: 700px;
-   }
-
-    .user-found-procedure-body p {
-        font-size: 10px;
-        top: 27%;
-        left: 5%;
+@media (max-width: 550px) 
+{ 
+    .user-found-procedure-body p 
+    {
+        font-size: 0.6rem;
+        margin-left: 50px;
     }
-
-    .lost-reminders p {
-        width: 50%;
-    }
-
-    .user-found-procedure-body button {
-        top: 80%;
-        left: 30%;
-        width: 150px;
-        height: 35px;
-    }
-}
-
-@media (max-width: 576px) {
-   .user-found-procedure-body {
-        width: 450px;
-        height: 790px;
-   }
-
-    .user-found-procedure-body p {
-        width: 80%;
-        top: 23%;
-        left: 5%;
-    }
-
-    .lost-reminders p {
-        width: 30%;
-    }
-
-    .user-found-procedure-body button {
-        top: 90%;
-        left: 30%;
-        width: 150px;
-        height: 35px;
-    }
+     
 }
