--- a/client/src/user_pages/styles/UserProfilePage.css
+++ b/client/src/user_pages/styles/UserProfilePage.css
@@ -2,7 +2,7 @@
     position: relative;
     top: 7%;
     background-color: #D9D9D9;
-    width: 1455px;
+    width: 100%;
     height: 728px;
     margin-left: 80px;
 }
@@ -13,7 +13,7 @@
     top: 10%;
     left: 1%;
     background-color: #cdcbcb;
-    width: 1400px;
+    width: 95%;
     height: 220px;
     border-radius: 10px;
 }
@@ -53,6 +53,7 @@
 
 .container-details h1 {
     font-weight: 900;
+    margin-left: 5%;
 }
 
 .profile-other-details {
@@ -96,6 +97,7 @@
 }
 
 .profile-quick-action button{
+    margin-top: 5px;
     margin-left: 10px;
     background-color: #475C6F;
     border-radius: 10px;
@@ -118,6 +120,6 @@
     
     background-color: white;
     justify-content: center;
-    width: 1400px;
+    width: 95%;
     height: 300px;
 }
