--- a/client/src/user_pages/styles/UserFoundItemPage.css
+++ b/client/src/user_pages/styles/UserFoundItemPage.css
@@ -3,7 +3,7 @@
     top: 7%;
     background-color: #D9D9D9;
     width: 100%;
-    min-height: 120vh;
+    height: 120vh;
     margin-left: 80px;
 }
 .found-item-body h1 {
