--- a/client/src/user_pages/styles/UserSettingsPage.css
+++ b/client/src/user_pages/styles/UserSettingsPage.css
@@ -1,7 +1,7 @@
 .settings-body {
     background-color: #D9D9D9;
-    width: 1455px;
-    height: 728px;
+    width: 90%;
+    height: 720px;
     margin-left: 80px;
 }
 
@@ -11,12 +11,38 @@
 }
 
 
-
 .settings-container {
-    position: relative;
-    top: 5%;
-    background-color: #D9D9D9;
-    width: 1455px;
-    height: 100%;
-    margin-left: 80px;
+    position: absolute;
+    background-color: white;
+    width: 90%;
+    top: 7%;
+    border-radius: 20px;
+    height: 90%;
+    margin-left: 10px;
+    margin-bottom: 10px;
+}
+
+
+.other-settings {
+    position: absolute;
+    margin-top: 20px;
+    top: -80%;
+    margin-left: 120%;
+}
+
+
+
+@media (max-width: 1200px) {
+   .settings-container {
+    height: 180vh;
+   }
+
+   .found-item-body {
+    height: 200vh;
+   }
+
+   .other-settings {
+    left: -115%;
+    top: 95%;
+   }
 }
