--- a/client/src/user_pages/styles/HomePage.css
+++ b/client/src/user_pages/styles/HomePage.css
@@ -143,8 +143,9 @@
     max-width: 100%;
     height: 420px;
     top: 20%;
-    overflow-x: hidden;
+    overflow-x: auto;
     overflow-y: visible;
+    flex-wrap: nowrap;
     scroll-behavior: smooth;
     z-index: 0;
 }
@@ -153,12 +154,13 @@
     position: relative;
     display: flex;
     flex-direction: row;
+    flex-wrap: nowrap;
     padding: 15px;
     gap: 20px;
     max-width: 100%;
     height: 420px;
     top: 29%;
-    overflow-x: hidden;
+    overflow-x: auto;
     overflow-y: visible;
     scroll-behavior: smooth;
     z-index: 0;
@@ -249,6 +251,16 @@
 .found-item-card:hover {
     background-color: white;
     scale: 1.05;
+}
+
+.home-lost-container::-webkit-scrollbar,
+.home-found-container::-webkit-scrollbar {
+    display: none;
+}
+.home-lost-container,
+.home-found-container {
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none;    /* Firefox */
 }
 
 
