--- a/server/views/server.ejs
+++ b/server/views/server.ejs
@@ -85,7 +85,7 @@
             <form method="POST" action="/server/create-admin" class="mt-3">
                 <div class="row g-3">
                     <div class="col-md-4">
-                        <input type="text" name="studentId" class="form-control" placeholder="Enter Student ID" required />
+                        <input type="text" name="studentId" class="form-control" placeholder="Enter Employee ID" required />
                     </div>
                     <div class="col-md-4">
                         <input type="email" name="email" class="form-control" placeholder="Enter Email" required />
